Closed Bug 619387 Opened 14 years ago Closed 14 years ago

crash [@ nsMsgDBFolder::AutoCompact(nsIMsgWindow*)]

Categories

(MailNews Core :: Backend, defect)

x86
All
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.3a2

People

(Reporter: wsmwk, Assigned: m_kato)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

crash [@ nsMsgDBFolder::AutoCompact(nsIMsgWindow*)]

not seen yet in 3.1.7, not a regression, rare

bp-b229d69e-c8bd-4449-a0ba-7a2882101202
EXCEPTION_ACCESS_VIOLATION_READ
0x0
0	thunderbird.exe	nsMsgDBFolder::AutoCompact	mailnews/base/util/nsMsgDBFolder.cpp:1715
1	thunderbird.exe	nsMsgLocalMailFolder::EndMove	mailnews/local/src/nsLocalMailFolder.cpp:2871
2	thunderbird.exe	nsCopyMessageStreamListener::EndCopy	mailnews/base/src/nsCopyMessageStreamListener.cpp:179
3	thunderbird.exe	nsCopyMessageStreamListener::OnStopRequest	mailnews/base/src/nsCopyMessageStreamListener.cpp:190
4	thunderbird.exe	nsMsgProtocol::OnStopRequest	mailnews/base/util/nsMsgProtocol.cpp:401
5	thunderbird.exe	nsMailboxProtocol::OnStopRequest	mailnews/local/src/nsMailboxProtocol.cpp:381
6	thunderbird.exe	nsInputStreamPump::OnStateStop	netwerk/base/src/nsInputStreamPump.cpp:578
allServers is null. (NS_ENSURE_SUCCESS(rv, rv) after GetAllServers is no sense)

Also, We should initialize numServers as 0.
Assignee: nobody → m_kato
Attached patch fix v1Splinter Review
Attachment #497925 - Flags: review?(bienvenu)
Comment on attachment 497925 [details] [diff] [review]
fix v1

+     PRUint32 numServers=0, serverIndex=0;

can you put spaces around the '=' signs? r=me, with that nit fixed.
Attachment #497925 - Flags: review?(bienvenu) → review+
http://hg.mozilla.org/comm-central/rev/36fa8a175e06
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.3a2
Crash Signature: [@ nsMsgDBFolder::AutoCompact(nsIMsgWindow*)]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: