Bug 619387 - crash [@ nsMsgDBFolder::AutoCompact(nsIMsgWindow*)]. r=bienvenu